--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,15 +35,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textBest"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
+        android:layout_above="@+id/textViewHighScore"
+        android:layout_marginBottom="10dp"
         android:text="Best Score:"
         android:textColor="#fff"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/textBest"
+        android:layout_above="@+id/startBtn"
+        android:layout_marginBottom="10dp"
         android:id="@+id/textViewHighScore"
         android:textStyle="bold"
         android:textColor="#fff"
@@ -56,16 +58,16 @@
         android:id="@+id/startBtn"
         android:background="#fff"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/textViewHighScore"
         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:text="Start"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textYourScore"
         android:textColor="#fff"
-        android:layout_below="@+id/startBtn"
         android:layout_centerHorizontal="true"
+        android:layout_below="@+id/startBtn"
         android:text="Your Score:"
         android:layout_marginTop="10dp"/>
 
@@ -73,8 +75,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textYour"
-        android:layout_below="@id/textYourScore"
         android:layout_centerHorizontal="true"
+        android:layout_below="@id/textYourScore"
+        android:layout_marginTop="10dp"
         android:text="0"
         android:textSize="40sp"
         android:textColor="#fff"
